Changed the meta data and the language

--- a/skripte/meta.tex
+++ b/skripte/meta.tex
@@ -3,25 +3,26 @@
 %-----------------------------------
 
 % Autor
-\newcommand{\myAutor}{Max Mustermann}
+\newcommand{\myAutor}{Dominik Fey}
 
 % Adresse
-\newcommand{\myAdresse}{Heidestra\ss e 17 \\ \> \> \> 51147 Köln}
+\newcommand{\myAdresse}{Buschgasse 40 \\ \> \> \> 50189 Elsdorf}
 
 % Titel der Arbeit
-\newcommand{\myTitel}{LATEX-Vorlage - mit Biblatex}
+\newcommand{\myTitel}{Implementation of an AI-Supported Centralized Procurement Interface to Enhance Procurement
+Processes in a Large-Scale Enterprise}
 
 % Betreuer
-\newcommand{\myBetreuer}{Prof. Dr. Peter Lustig}
+\newcommand{\myBetreuer}{Prof. Dr. Bernd Ulmann}
 
 % Lehrveranstaltung
 \newcommand{\myLehrveranstaltung}{Modul Nr. 1}
 
 % Matrikelnummer
-\newcommand{\myMatrikelNr}{123456}
+\newcommand{\myMatrikelNr}{601373}
 
 % Ort
-\newcommand{\myOrt}{Düsseldorf}
+\newcommand{\myOrt}{Cologne}
 
 % Datum der Abgabe
 \newcommand{\myAbgabeDatum}{\today}
@@ -30,13 +31,13 @@
 \newcommand{\mySemesterZahl}{7}
 
 % Name der Hochschule
-\newcommand{\myHochschulName}{FOM Hochschule für Oekonomie \& Management}
+\newcommand{\myHochschulName}{FOM University of Applied Sciences for Economics and Management}
 
 % Standort der Hochschule
-\newcommand{\myHochschulStandort}{Düsseldorf}
+\newcommand{\myHochschulStandort}{Cologne}
 
 % Studiengang
-\newcommand{\myStudiengang}{Wirtschaftsinformatik}
+\newcommand{\myStudiengang}{Business Informatics}
 
 % Art der Arbeit
 \newcommand{\myThesisArt}{Bachelor Thesis}
@@ -45,7 +46,7 @@
 \newcommand{\myAkademischerGrad}{Bachelor of Science (B.Sc.)}
 
 % Firma
-\newcommand{\myFirma}{Mustermann GmbH}
+\newcommand{\myFirma}{Deutsche Telekom AG}
 
 % Definition der Sprache
 \ifdefined\FOMEN
