--- a/thesis_main.tex
+++ b/thesis_main.tex
@@ -1,4 +1,6 @@
-%TC:ignore - ignoriert die folgnden Wörter beim Wordcount in Overleaf 
+%! Compiler = pdflatex
+%! BibTeX Compiler = biber
+%TC:ignore - ignoriert die folgnden Wörter beim Wordcount in Overleaf
 %-----------------------------------
 % Define document and include general packages
 %-----------------------------------
@@ -15,7 +17,7 @@
 %-----------------------------------
 % Dokumentensprache
 %-----------------------------------
-%\def\FOMEN{}% Auskommentieren um die Dokumentensprache auf englisch zu ändern
+\def\FOMEN{}% Auskommentieren um die Dokumentensprache auf englisch zu ändern
 \newif\ifde
 \newif\ifen
 
