Changed the meta data

--- a/skripte/meta.tex
+++ b/skripte/meta.tex
@@ -16,7 +16,7 @@ Processes in a Large-Scale Enterprise}
 \newcommand{\myBetreuer}{Prof. Dr. Bernd Ulmann}
 
 % Lehrveranstaltung
-\newcommand{\myLehrveranstaltung}{Modul Nr. 1}
+\newcommand{\myLehrveranstaltung}{Bachelor Module}
 
 % Matrikelnummer
 \newcommand{\myMatrikelNr}{601373}
