--- a/thesis_main.tex
+++ b/thesis_main.tex
@@ -391,7 +391,7 @@ mincrossrefs = 1
 %-----------------------------------
 % Sperrvermerk
 %-----------------------------------
-%\input{kapitel/anhang/sperrvermerk}
+\input{kapitel/anhang/sperrvermerk}
 
 %-----------------------------------
 % Seitennummerierung auf arabisch und ab 1 beginnend umstellen
