--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -1,166 +1,50 @@
-@book{Beckert.2012,
-	usera = {Mobile Lösungen},
-	keyword = {primary},
-	author = {Beckert, André and Beckert, Sebastian and Escherich, Bernhard},
-	year = {2012},
-	title = {Mobile L{\"o}sungen mit SAP},
-	location = {Bonn},
-	edition = {1},
-	publisher = {Galileo Press},
-	isbn = {978-3836219310}
+@article{andersonDockerSoftwareEngineering2015,
+  title = {Docker [{{Software}} Engineering]},
+  author = {Anderson, Charles},
+  date = {2015-05},
+  journaltitle = {IEEE Software},
+  volume = {32},
+  number = {3},
+  pages = {102-c3},
+  issn = {1937-4194},
+  doi = {10.1109/MS.2015.62},
+  url = {https://ieeexplore.ieee.org/document/7093032/figures#figures},
+  urldate = {2024-10-03},
+  abstract = {In episode 217 of Software Engineering Radio, host Charles Anderson talks with James Turnbull, a software developer and security specialist who's vice president of services at Docker. Lightweight Docker containers are rapidly becoming a tool for deploying microservice-based architectures.},
+  eventtitle = {{{IEEE Software}}},
+  keywords = {Docker,Docker containers,Interviews,James Turnbull,microservices,SE Radio,Software development,Software engineering,Software Engineering Radio,Virtual machining}
 }
 
-@book{Beckert.2012.1,
-	usera = {Mobile Lösungen},
-	keyword = {primary},
-	author = {Beckert, André and Beckert, Sebastian and Escherich, Bernhard},
-	year = {2012},
-	title = {Mobile L{\"o}sungen mit SAP},
-	location = {Bonn},
-	edition = {1},
-	publisher = {Galileo Press},
-	isbn = {978-3836219310}
-}
-@book{Beckert.2012.2,
-	usera = {Mobile Lösungen2},
-	keyword = {primary},
-	author = {Beckert, André and Beckert, Sebastian and Escherich, Bernhard},
-	year = {2012},
-	title = {Mobile L{\"o}sungen mit SAP},
-	location = {Bonn},
-	edition = {1},
-	publisher = {Galileo Press},
-	isbn = {978-3836219310}
+@article{krishnamoorthyEvolutionReadingComprehension2021,
+  title = {Evolution of {{Reading Comprehension}} and {{Question Answering Systems}}},
+  author = {Krishnamoorthy, Venkatesh},
+  date = {2021-01-01},
+  journaltitle = {Procedia Computer Science},
+  shortjournal = {Procedia Computer Science},
+  series = {Big {{Data}}, {{IoT}}, and {{AI}} for a {{Smarter Future}}},
+  volume = {185},
+  pages = {231--238},
+  issn = {1877-0509},
+  doi = {10.1016/j.procs.2021.05.024},
+  url = {https://www.sciencedirect.com/science/article/pii/S1877050921011066},
+  urldate = {2024-10-03},
+  abstract = {Natural Language Processing (NLP) has witnessed considerable advances in textual understanding through statistical and rule-based techniques, which have now yielded to developments in the field of neural networks and deep learning. The paper surveys research relevant to the topic of Reading Comprehension and Question Answering (QA) implementations. The initial focus of the paper is on Attention and Transformer models. A brief description of the architectures is presented highlighting the essence of the ‘Attention is all you Need’ paper wherein the authors of Bidirectional Encoding Transformer (BERT) have elucidated the significant departure from the recurrence concept of Recurrent Neural Networks (RNN). Subsequently the trends in Open Domain Question Answering (ODQA) which mark the progression from the passage- based question answering is presented. Of particular interest is Haystack which is an end-to-end open-source framework for Question Answering \& Neural search. This field seems a promising avenue for a more intelligent form of ‘search’. In a nutshell, the paper weaves through RNNs, Long Short-Term Memory (LSTM), and the currently trending Attention based Transformer models in NLP. Finally, we dwell on more contemporary pieces of research such as ODQA, Multi-Hop QA, evaluation using Adversarial Networks.},
+  keywords = {Attention,BERT,ELMo,HayStack,Knowledge Graph,LSTM,Multi-Hop,RNN,SQUaD,Transfer Learning,Transformer}
 }
 
-@book{Tanenbaum.2003,
-	usera = {Computernetzwerke},
-	keyword = {primary},
-	author = {Tanenbaum, Andrew},
-	year = {2003},
-	title = {Computernetzwerke},
-	location = {M{\"u}nchen},
-	edition = {4},
-	publisher = {Pearson Studium},
-	isbn = {978-3827370464}
-}
-@book{Balzert.2008,
-	usera = {Wissenschaftliches Arbeiten},
-	keyword = {primary},
-	author = {Balzert, Helmut and Bendisch, Roman and Kern, Uwe and others},
-	year = {2008},
-	title = {Wissenschaftliches Arbeiten: Wissenschaft, Quellen, Artefakte, Organisation, Pr{\"a}sentation},
-	location = {Herdecke [u.a.]},
-	publisher = {W3L-Verl.},
-	isbn = {978-3937137599},
-	series = {Soft skills}
-}
-
-% Werk mit mehr als drei hinterlegten Autoren, um das Verhalten von Biblatex zu demonstrieren
-@book{Balzert2.2008,
-	usera = {XYZWissenschaftliches Arbeiten},
-	keyword = {primary},
-	author = {Balzert2, Helmut and Bendisch, Roman and Kern, Uwe and Sch{\"a}fer, Christian and Schr{\"o}der, Marion and Zeppenfeld, Klaus},
-	year = {2008},
-	title = {Wissenschaftliches Arbeiten: Wissenschaft, Quellen, Artefakte, Organisation, Pr{\"a}sentation},
-	location = {Herdecke [u.a.]},
-	publisher = {W3L-Verl.},
-	isbn = {978-3937137599},
-	series = {Soft skills}
-}
-
-@online{website:angular:aboutAngular,
-	usera = {AngularJS},
-	title = "AngularJS - Was ist Angular?",
-	author = "Sascha Brink",
-	url = {https://angularjs.de/buch/was-ist-angularjs},
-	%Daten für den alten Stil
-	%year = "2014",
-	%note = "05.04.2015, 19:25",
-	%Daten für neuen 2018er Stil
-	date = {2018-12-20},
-	urltime = {23:30},
-	urldate = {2019-01-02}
-}
-
-@article{Decker2009,
-	usera = {Koalitionsaussagen},
-	year = {2009},
-	volume = {40},
-	issue = {2},
-	pages = {431--453},
-	author = {Decker, Frank},
-	title = {Koalitionsaussagen der Parteien vor Wahlen. Eine Forschungsskizze im Kontext des deutschen Regierungssystems},
-	journal = {Zeitschrift für Parlamentsfragen}
-}
-@online{RCoreManual,
-	usera = {R Core},
-	title = {R: A Language and Environment for Statistical Computing},
-	author = {{ R Core Team }},
-	organization = {R Foundation for Statistical Computing},
-	location = {Vienna, Austria},
-	date = {2018-12-20},
-	urldate = {2019-01-02},
-	urltime = {23:30},
-	url = {https://cran.r-project.org/doc/manuals/r-release/fullrefman.pdf},
-}
-
-@incollection{becker2016data,
-	author = {Becker, Wolfgang and Ulrich, Patrick and Botzkowski, Tim},
-	booktitle = {Data Analytics im Mittelstand},
-	edition = {1},
-	location = {Wiesbaden},
-	publisher = {Springer},
-	usera = {Data Analytics},
-	editor = {Becker, Wolfgang and Ulrich, Patrick},
-	title = {Management und Controlling im Mittelstand},
-	date = {2016},
-}
-
-@online{FOM,
-    usera = {Onlinecampus},
-    author = {{Hochschule für Oekonomie \& Management}},
-    title = {{Onlinecampus}},
-    url = {https://www.campus.bildungscentrum.de},
-    urldate = {2018-11-01},
-    year = {2018}
-}
-@book{Wolff2017,
-    address = {Boston, Columbus, Indianapolis, New York},
-    author = {Wolff, Eberhard},
-    usera = {Microservices},
-    publisher = {Pearson Education},
-    title = {{Microservices}},
-    year = {2017}
-}
-% sortkey: damit nach "Lucke" und nicht nach "von Lucke" sortiert wird
-@incollection{Lucke2018,
-    editor = {Heuermann, Roland and Tomenendal, Matthias and Bressem, Christian},
-    author = {{von} Lucke, Jörn and Heuermann, Roland and Poder, Helmut and others},
-    sortkey= {Lucke, Jörn von},
-    usera = {Treiber},
-    publisher = {Springer Gabler},
-    location = {Berlin},
-    pages = {153-213},
-    series = {{Digitalisierung in Bund, Ländern und Gemeinden}},
-    title = {Treiber, Ratgeber, Meinungsmacher},
-    year = {2018}
-}
-@article{Wiederhofer2017,
-    author = {Wiederhofer, André},
-    usera = {IT-Flexibilität},
-    pages = {236-244},
-    journal = {{Informatik-Spektrum}},
-    title = {Steigerung der IT-Flexibilität},
-    volume = {40},
-    number = {3},
-    year = {2017}
-}
-% Quelle ohne eigene Jahresangabe --> o. J. bzw. keine Datumsangabe
-@online{Belastingdienst,
-    usera = {{Bürgerservicenummer}},
-    author = {{Belastingdienst}},
-    title = {{Was ist eine Bürgerservicenummer (BSN)?}},
-    url = {https://www.belastingdienst.nl/wps/wcm/connect/bldcontentde/belastingdienst/privatpersonen/sonstige_themen/buergerservicenummer/was_ist_eine_buergerservicenummer_bsn},
-    urldate = {2019-02-26},
+@article{syedQuestionAnsweringChatbot2021,
+  title = {Question {{Answering Chatbot}} for {{Troubleshooting Queries}} Based on {{Transfer Learning}}},
+  author = {Syed, Zeeshan Haque and Trabelsi, Asma and Helbert, Emmanuel and Bailleau, Vincent and Muths, Christian},
+  date = {2021},
+  journaltitle = {Procedia Computer Science},
+  shortjournal = {Procedia Computer Science},
+  volume = {192},
+  pages = {941--950},
+  issn = {18770509},
+  doi = {10.1016/j.procs.2021.08.097},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1877050921015854},
+  urldate = {2024-10-03},
+  abstract = {Open-Domain Question Answering (ODQA) is a technique for finding an answer to a given query from a large set of documents. In this paper, we present an experimentation study to compare ODQA candidate solutions in the context of troubleshooting documents. We mainly focus on a well known open-source framework which is called Haystack. This framework comprises two key components which are the Retriever and the Reader. The Haystack Framework comes with several Retriever-Reader combinations and the choice of the best one is still unanswered till now. In this paper, we conduct an experimentation study to compare different Retriever-Reader combinations. Our aim is to come up with the best combination of components in regard to the speed and the processing power within the context of troubleshooting queries.},
+  langid = {english},
+  file = {/Users/A200017936/Zotero/storage/425ZNZ74/Syed et al. - 2021 - Question Answering Chatbot for Troubleshooting Queries based on Transfer Learning.pdf}
 }
