--- a/kapitel/einleitung/einleitung.tex
+++ b/kapitel/einleitung/einleitung.tex
@@ -27,29 +27,44 @@ To achieve
 this, the backend relies on Python and Haystack, while the frontend utilizes Vue and Vuetify, and the deployment is
 managed through containerization and orchestration technologies like Docker and Kubernetes.
 
+
+
+
 \subsubsection{Backend Technologies}
 
 \subsubsubsection{Python and Haystack}
 
 Python serves as the backbone of the application due to its extensive ecosystem and its ability to seamlessly integrate
 various libraries and frameworks that facilitate rapid prototyping and the development of complex data-driven
-functionalities.
-Its prominence in the fields of machine learning and data science makes it an ideal choice for
-implementing a chatbot that requires advanced natural language understanding (NLU) capabilities.
-Specifically, Python's
+functionalities. Its prominence in the fields of machine learning and data science makes it an ideal choice for
+implementing a chatbot that requires advanced natural language understanding (NLU) capabilities. Specifically, Python's
 compatibility with NLP frameworks like Haystack ensures that the chatbot can parse user inputs and perform context-aware
-semantic searches.
-This capability is crucial for accurately interpreting customer needs and mapping them to appropriate
+semantic searches. This capability is crucial for accurately interpreting customer needs and mapping them to appropriate
 products or services in the supplier catalog.
 
-The use of Haystack within this project aligns perfectly with the goal of creating an intelligent, search-driven
-chatbot.
-Haystack, being an open-source NLP framework optimized for building end-to-end search applications, provides
-the necessary tools to build a robust search pipeline that can handle complex queries.
-Given that the chatbot’s primary
-function is to find relevant matches for customer requirements within a large set of offerings, Haystack’s ability to
-perform semantic searches and retrieve information based on context significantly enhances the chatbot’s response
-accuracy and relevance.
+The integration of Haystack within this project serves as a cornerstone for the development of an intelligent,
+search-driven chatbot, which is designed to address the intricate nature of customer inquiries. Haystack, a robust
+open-source Natural Language Processing (NLP) framework, employs a sophisticated Reader-Retriever architecture that
+harmonizes the capabilities of both information retrieval and deep semantic understanding. This dual approach
+capitalizes on advanced NLP methodologies to enhance the chatbot’s performance in extracting pertinent information from
+extensive datasets\parencite[cf.][p.236]{krishnamoorthyEvolutionReadingComprehension2021}.
+
+Notably, rather than utilizing the standard BERT model, this implementation leverages OpenAI’s GPT-4 model within the
+Haystack framework. This allows the system to engage in nuanced contextual interpretation, thereby significantly
+improving the precision of semantic searches. The choice of GPT-4 is particularly advantageous in question-answering
+scenarios, as it allows the chatbot to comprehend the subtleties of customer queries and generate responses that are not
+only contextually relevant but also demonstrate a high degree of language understanding
+\autocite[cf.][p.943-944]{syedQuestionAnsweringChatbot2021}.
+
+Moreover, Haystack’s modular architecture and extensible Application Programming Interfaces (APIs) offer a high degree
+of flexibility, facilitating seamless integration within the chatbot’s overall architecture. This ensures that the
+processes of searching and retrieving supplier catalog data are executed with optimal accuracy and efficiency.
+Consequently, Haystack’s inclusion in the technical stack is not merely contributory to the current system’s
+capabilities but also establishes a solid foundation for prospective advancements and refinements in the chatbot’s
+functional repertoire.
+
+
+
 
 \subsubsubsection{PostgreSQL}
 
