--- a/abkuerzungen/acronyms.tex
+++ b/abkuerzungen/acronyms.tex
@@ -2,7 +2,8 @@
 \section*{\langde{Abkürzungsverzeichnis}\langen{List of Abbreviations}}
 
 \begin{acronym}[WYSIWYG]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
-  \acro{OC}{FOM Online Campus}
-  \acro{WYSIWYG}{What you see is what you get}
-  \acro{Beispiel}{Nicht verwendet, taucht nicht im Abkürzungsverzeichnis auf}
+  \acro{NLU}{Natural Language Understanding}
+  \acro{NLP}{Natural Language Processing}
+  \acro{API}{Application Programming Interface}
+  \acro{IaC}{Infrastructure-as-Code}
 \end{acronym}
