--- a/abkuerzungen/glossar.tex
+++ b/abkuerzungen/glossar.tex
@@ -1,2 +1,2 @@
-\newglossaryentry{glossar}{name={Glossar},description={In einem Glossar werden Fachbegriffe und Fremdwörter mit ihren Erklärungen gesammelt.}}
-\newglossaryentry{glossaries}{name={Glossaries},description={Glossaries ist ein Paket was einen im Rahmen von LaTeX bei der Erstellung eines Glossar unterstützt.}}
+\newglossaryentry{NLU}{name={NLU},description={Das ist Natural Language Understanding.}}
+\newglossaryentry{NLP}{name={NLP},description={Das ist Natural Language Processing.}}
